# oskey-lib-core

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  mbedtls.rb
action/: Cargo.toml
action/src/: lib.rs
bridge/: Cargo.toml
bus/: .gitignore  Cargo.toml  build.rs
bus/src/: lib.rs
bus/src/proto/: ohw.proto  oskey.proto
chain/: Cargo.toml
chain/src/: eth.rs  lib.rs
crates/ohw-algorithm-bip32/: Cargo.toml
crates/ohw-algorithm-bip39/: Cargo.toml
crates/ohw-algorithm-bip39/src/: lib.rs
crates/ohw-algorithm-bip44/: Cargo.toml
crypto/: CMakeLists.txt  bip32.c  bip39.c  bip39.h  test.c  test.h  wrapper.h
crypto/codec/: base58.h
hd/: Cargo.toml
hd/psa/: hash.h  option.h  x25519.c
hd/psa/compact25519/: compact25519.c
hd/src/: lib.rs
hd/src/alg/: bindings.rs  crypto.rs  mod.rs
protobuf/: .gitignore  Cargo.toml  build.rs
protobuf/src/: lib.rs
protobuf/src/proto/: ohw.proto
psa/: CMakeLists.txt  bip32.h  bip39.h  ed25519.c  ed25519.h  hash.c  hash.h  hmac.c  hmac.h  k256.c  k256.h  pbkdf2.c  pbkdf2.h  psa_init.c  psa_init.h  sha.c  sha.h  test.h  wrapper.h  x25519.c  x25519.h
psa/codec/: base58.c
src/: bindings.rs  crypto.rs  lib.rs  mnemonic.rs  path.rs  utils.rs  wallets.rs
src/alg/: bindings.rs  crypto.rs  mod.rs
src/data/: mod.rs  word_list.rs
wallet/: CMakeLists.txt  Cargo.toml  build.rs
wallet/psa/: CMakeLists.txt  chacha20poly1305.c  chacha20poly1305.h  ed25519.c  ed25519.h  k256.c  k256.h  psa_init.c  wrapper.h
wallet/psa/compact25519/: compact25519.h
wallet/src/alg/: bindings.rs  crypto.rs
