[package]
name = "ohw-wallets"
version = "0.0.1"
edition = "2021"
description = ""
license = ""


[features]
default = ["build", "crypto-psa"]
# Crypto backend selection (mutually exclusive):
# Note: enable both 'crypto-psa' and 'build' features to link against host lib.
crypto-psa = []
crypto-rs = ["dep:sha2", "dep:pbkdf2", "dep:hmac", "dep:k256", "dep:ripemd"]
build = []

[dependencies]
hex = { version = "0.4", default-features = false, features = ['alloc'] }
anyhow = { version = "1.0", default-features = false }
heapless = { version = "0.8", default-features = false, features = ['serde'] }
zerocopy = { version = "0.8", default-features = false, features = ['alloc'] }
bitvec = { version = "1.0", default-features = false, features = [
  'alloc',
  'serde',
] }
serde = { version = "1.0", default-features = false, features = [
  'alloc',
  'derive',
] }
zeroize = { version = "1.8", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ['alloc'] }

# If not use psa feature
sha2 = { version = "0.10", default-features = false, optional = true }
pbkdf2 = { version = "0.12", default-features = false, features = [
  "simple",
], optional = true }
hmac = { version = "0.12", default-features = false, optional = true }
k256 = { version = "0.14.0-pre.2", default-features = false, features = [
  "ecdsa",
  "sha256",
], optional = true }
ripemd = { version = "0.1.3", default-features = false, optional = true }

[build-dependencies]
cmake = { version = "0.1" }
bindgen = { version = "0.70" }
