[package]
name = "oskey-action"
version = "0.0.1"
edition = "2021"
description = ""
license = ""

[dependencies]
anyhow = { version = "1.0", default-features = false }
oskey-bus = { package = "oskey-bus", path = "../bus" }
oskey-wallet = { package = "oskey-wallet", path = "../wallet", default-features = false }

[dev-dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
