[package]
name = "oskey-action"
version = "0.0.1"
edition = "2021"
description = ""
license = ""

[features]
default = ["crypto-link"]
crypto-rs = ["oskey-wallet/crypto-rs"]
crypto-psa = ["oskey-wallet/crypto-psa"]
crypto-link = ["oskey-wallet/crypto-psa", "oskey-wallet/build"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
oskey-bus = { package = "oskey-bus", path = "../bus" }
oskey-wallet = { package = "oskey-wallet", path = "../wallet" }
oskey-chain = { package = "oskey-chain", path = "../chain" }

[dev-dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
