[package]
name = "oskey-bridge"
version = "0.0.1"
edition = "2021"
description = ""
license = ""

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow ={ version = "1" }
serialport = { version = "4", features = ["usbportinfo-interface"]}