[package]
name = "ohw-algorithm-bip39"
version.workspace = true # bip39 2.1.0
edition.workspace = true

authors = ["Steven Roose <steven@stevenroose.org>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bip39/"
repository = "https://github.com/rust-bitcoin/rust-bip39/"
documentation = "https://docs.rs/bip39/"
description = "Library for BIP-39 Bitcoin mnemonic codes"
keywords = [ "crypto", "bitcoin", "bip39", "mnemonic" ]
readme = "README.md"

[features]
default = [ "std" ]
std = [ "alloc", "serde/std", "unicode-normalization/std" ]
rand = [ "crate_rand", "rand_core" ]
alloc = [ "unicode-normalization" ]

# Note: English is the standard for bip39 so always included
chinese-simplified = []
chinese-traditional = []
czech = []
french = []
italian = []
japanese = []
korean = []
portuguese = []
spanish = []

all-languages = [
    "chinese-simplified",
    "chinese-traditional",
    "czech",
    "french",
    "italian",
    "japanese",
    "korean",
    "portuguese",
    "spanish"
]

[dependencies]
rand_core.workspace = true
crate_rand.workspace = true
serde.workspace = true
zeroize.workspace = true
bitcoin_hashes.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
# Enabling the "rand" feature by default to run the benches
bip39 = { path = ".", features = ["rand"] }
bitcoin_hashes = ">=0.12,<0.14" # enable default features for test


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
